fix(ci): repo url

--- a/.github/workflows/mirror.yaml
+++ b/.github/workflows/mirror.yaml
@@ -8,7 +8,7 @@ on:
       - closed
 
 env:
-  MIRROR_URL: "git@github.com:EpitechPromo2026/ToDetermine"
+  MIRROR_URL: "git@github.com:EpitechPromo2026/B-YEP-400-PAR-4-1-zappy-florian.lauch.git"
 
 jobs:
   push_to_mirror:
