--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -5,12 +5,13 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
 set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
 
-find_package(OGRE REQUIRED COMPONENTS Bites CONFIG)
+find_package(raylib 3.5 REQUIRED COMPONENTS Bites CONFIG)
 
 include_directories(.)
+include_directories(/home/Taha/Downloads/raylib/examples/shaders/rlights.h)
 
 add_executable(zappy_gui
         src/Main.cpp
         )
 
-target_link_libraries(zappy_gui OgreBites)
+target_link_libraries(zappy_gui raylib)
