feat(server): basic server socket

--- a/server/Makefile
+++ b/server/Makefile
@@ -5,10 +5,15 @@
 ## Makefile
 ##
 
-SRC			=	src/util/args.c \
+SRC			=	src/core/fdsets.c \
+				src/core/init.c \
+				src/core/loop.c \
+				src/util/args.c \
 				src/util/args_check.c \
 				src/util/arrays.c \
+				src/util/clients.c \
 				src/util/handlers.c \
+				src/util/util.c \
 				src/server.c
 
 MAIN		=	src/main.c
