--- a/server/Makefile
+++ b/server/Makefile
@@ -7,10 +7,13 @@
 
 SRC			=	src/core/fdsets.c \
 				src/core/init.c \
+				src/core/input.c \
 				src/core/loop.c \
+				src/core/tick.c \
 				src/util/args.c \
 				src/util/args_check.c \
 				src/util/arrays.c \
+				src/util/buffer.c \
 				src/util/clients.c \
 				src/util/handlers.c \
 				src/util/util.c \
