fix(Window) Camel case for files names and class names and put getter and setter in .cpp

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -12,7 +12,7 @@ add_executable(zappy_gui
         src/Main.cpp
         src/Character.cpp
         src/Map.cpp
-        src/window.cpp
+        src/Window.cpp
         src/Core.cpp
         src/Gameplay.cpp
         encapsulation/draw.cpp
