--- a/server/Makefile
+++ b/server/Makefile
@@ -18,7 +18,7 @@ SRC			=	src/core/fdsets.c \
 				src/util/arguments/check.c \
 				src/util/arguments/handlers.c \
 				src/util/arguments/names.c \
-				src/server.c
+				src/server.c \
 
 MAIN		=	src/main.c
 
