feat(server): player command handling

--- a/server/Makefile
+++ b/server/Makefile
@@ -16,6 +16,7 @@ SRC			=	src/core/fdsets.c \
 				src/objects/players.c \
 				src/objects/teams.c \
 				src/player/command.c \
+				src/player/info.c \
 				src/player/join.c \
 				src/util/arguments/args.c \
 				src/util/arguments/check.c \
