fix(Screen) create ISCREEN AND ABSTRACT CLASS AND HERITANCE TO MENU

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -16,6 +16,7 @@ add_executable(zappy_gui
         src/Gameplay/Character.cpp
         src/Gameplay/Map.cpp
         src/Menu/Menu.cpp
+        src/Menu/AScreen.cpp
         src/Menu/Button.cpp
         encapsulation/Cube.cpp
         encapsulation/Model.cpp
