--- a/server/Makefile
+++ b/server/Makefile
@@ -11,8 +11,8 @@ SRC			=	src/core/fdsets.c \
 				src/core/loop.c \
 				src/core/tick.c \
 				src/graphical/command.c \
-				src/graphical/map_answers.c \
-				src/graphical/team_name_answers.c \
+				src/graphical/map.c \
+				src/graphical/player.c \
 				src/objects/clients.c \
 				src/objects/players.c \
 				src/objects/teams.c \
