--- a/client/Makefile
+++ b/client/Makefile
@@ -1,24 +1,23 @@
-BUILD_DIR		=	cmake-build-debug
 CMAKE_FLAGS		=	-G "Unix Makefiles"
 
 NAME			=	zappy_gui
 
-all: build/$(NAME)
+all: $(NAME)
 
 build:
-	mkdir -p $(BUILD_DIR)
+	mkdir -p build
 
 build/Makefile: build
-	cd $(BUILD_DIR) && $(RM) CMakeCache.txt && cmake $(CMAKE_FLAGS) ..
+	cd build && cmake $(CMAKE_FLAGS) ..
 
 build/$(NAME): build/Makefile
-	$(MAKE) -C $(BUILD_DIR)
+	$(MAKE) -C build/
 
 $(NAME): build/$(NAME)
-	cp $(BUILD_DIR)/$(NAME) .
+	cp build/$(NAME) .
 
 clean:
-	$(MAKE) -C $(BUILD_DIR) clean
+	$(MAKE) -C build/ clean
 
 fclean: clean
 	$(RM) $(NAME)
