--- a/.github/workflows/zappy.yaml
+++ b/.github/workflows/zappy.yaml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Check coding style
         run: |
-          check.sh server/ .
+          check.sh $(pwd)/server/ $(pwd)
           while IFS=':' read -r file line type; do
             file="server/$file"
             echo "::error file=$file,line=$line,title=$type"
