fix: compil job

--- a/.github/workflows/zappy.yaml
+++ b/.github/workflows/zappy.yaml
@@ -76,7 +76,7 @@ jobs:
           fetch-depth: 0
       - name: Compilation execution
         timeout-minutes: 2
-        run: make
+        run: make ci
       - name: Test executables presence
         run: IFS=',' read -r -a array <<< ${{ env.EXECUTABLES }} ; for value in ${array[@]} ; do find . -executable -name "${value}" | grep -q . || echo "::error title="Executable not found"::${value}" ; done
       - name: Exit if executable not found
