fix: unit tests

--- a/server/Makefile
+++ b/server/Makefile
@@ -55,6 +55,7 @@ clean:
 	$(RM) $(OBJ)
 	$(RM) $(OBJ_M)
 	$(RM) $(OBJ_T)
+	find -name "*.gcda" -delete -o -name "*.gcno" -delete
 
 debug: CPPFLAGS += -g3
 debug: re
@@ -62,7 +63,6 @@ debug: re
 fclean:	clean
 	$(RM) $(NAME)
 	$(RM) $(TEST)
-	find -name "*.gcda" -delete -o -name "*.gcno" -delete
 
 re:	fclean all
 
@@ -70,7 +70,7 @@ tests_run: CFLAGS += --coverage
 tests_run: LDLIBS += -lcriterion
 tests_run: clean $(OBJ) $(OBJ_T)
 	$(CC) -o $(TEST) $(OBJ) $(OBJ_T) $(LDLIBS) --coverage
-	$(MAKE) clean
+	$(RM) $(OBJ)
 	./$(TEST)
 
 .PHONY: all clean fclean re tests_run
