feat(server): sst command and tick change

--- a/server/Makefile
+++ b/server/Makefile
@@ -14,6 +14,7 @@ SRC			=	src/core/fdsets.c \
 				src/graphical/command.c \
 				src/graphical/map.c \
 				src/graphical/player.c \
+				src/graphical/time.c \
 				src/objects/clients.c \
 				src/objects/players.c \
 				src/objects/teams.c \
