feat(class Parser) get information from zappy_gui and store into variables in this class with error handling

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -20,6 +20,7 @@ add_executable(zappy_gui
         src/Menu/Setting.cpp
         src/Menu/AScreen.cpp
         src/Menu/Button.cpp
+        src/Parser/Parser.cpp
         encapsulation/Cube.cpp
         encapsulation/Model.cpp
         encapsulation/Mouse.cpp
