--- a/server/Makefile
+++ b/server/Makefile
@@ -10,6 +10,7 @@ SRC			=	src/core/fdsets.c \
 				src/core/input.c \
 				src/core/loop.c \
 				src/core/map.c \
+				src/core/scheduler.c \
 				src/core/tick.c \
 				src/graphical/command.c \
 				src/graphical/map.c \
@@ -17,8 +18,10 @@ SRC			=	src/core/fdsets.c \
 				src/graphical/time.c \
 				src/objects/clients.c \
 				src/objects/players.c \
+				src/objects/tasks.c \
 				src/objects/teams.c \
 				src/player/command.c \
+				src/player/food.c \
 				src/player/info.c \
 				src/player/join.c \
 				src/util/arguments/args.c \
