feat(class Network): able to connect to the server and get the response of the server and store into a std::string

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -26,6 +26,7 @@ add_executable(zappy_gui
         encapsulation/Mouse.cpp
         encapsulation/Text.cpp
         encapsulation/Window.cpp
+        Network/Network.cpp
         )
 
 target_link_libraries(zappy_gui raylib)
