feat(server): Forward command for AI

--- a/server/Makefile
+++ b/server/Makefile
@@ -22,10 +22,12 @@ SRC			=	src/core/fdsets.c \
 				src/objects/players.c \
 				src/objects/tasks.c \
 				src/objects/teams.c \
+				src/player/actions.c \
 				src/player/command.c \
 				src/player/food.c \
 				src/player/info.c \
 				src/player/join.c \
+				src/player/move.c \
 				src/util/arguments/args.c \
 				src/util/arguments/check.c \
 				src/util/arguments/handlers.c \
