--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.18)
 project(zappy_gui)
 
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -ldl")
 set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
 
 include_directories(.)
@@ -26,7 +26,6 @@ add_executable(zappy_gui
         encapsulation/Mouse.cpp
         encapsulation/Text.cpp
         encapsulation/Window.cpp
-        Network/Network.cpp
         )
 
 target_link_libraries(zappy_gui raylib)
