--- a/client/Makefile
+++ b/client/Makefile
@@ -11,12 +11,15 @@ NAME			=	zappy_gui
 
 DIR_DEST		=	libs/
 
-all: $(NAME)
+SDK_COMM		=	communication_sdk.so
+SDK_COMM_PATH	=	../sdk/communication
+
+all: sdk $(NAME)
 
 sdk: $(NAME_SDK)
-	$(MAKE) -C ../sdk/communication/
+	$(MAKE) -C $(SDK_COMM_PATH)
 	mkdir -p $(DIR_DEST)
-	cp -r ../sdk/communication/include/ ../sdk/communication/communication_sdk.so $(DIR_DEST)
+	cp -r $(SDK_COMM_PATH)/include/ $(SDK_COMM_PATH)/$(SDK_COMM) $(DIR_DEST)
 
 build:
 	mkdir -p build
