feat: possibility to change fps, meteo and sound in menu

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -27,6 +27,7 @@ add_executable(zappy_gui
         encapsulation/Mouse.cpp
         encapsulation/Text.cpp
         encapsulation/Window.cpp
+        encapsulation/Music.cpp
         )
 
 target_link_libraries(zappy_gui raylib)
