feat(server): started take and set AI commands

--- a/server/Makefile
+++ b/server/Makefile
@@ -32,6 +32,7 @@ SRC			=	src/core/config.c \
 				src/player/eggs.c \
 				src/player/food.c \
 				src/player/info.c \
+				src/player/items.c \
 				src/player/join.c \
 				src/player/look.c \
 				src/player/move.c \
