feat(Menu) Add a scene gameover when one team wins and its trigger when the command seg from the server is received

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -19,6 +19,7 @@ add_executable(zappy_gui
         src/Gameplay/Map.cpp
         src/Menu/Menu.cpp
         src/Menu/Tuto.cpp
+        src/Menu/Gameover.cpp
         src/Menu/Setting.cpp
         src/Menu/AScreen.cpp
         src/Menu/Button.cpp
