feat(server): take and set AI commands, memory refactor on resources

--- a/server/Makefile
+++ b/server/Makefile
@@ -35,6 +35,7 @@ SRC			=	src/core/config.c \
 				src/player/items.c \
 				src/player/join.c \
 				src/player/look.c \
+				src/player/map.c \
 				src/player/move.c \
 				src/player/rotate.c \
 				src/util/arguments/args.c \
