feat(server): incantation basics

--- a/server/Makefile
+++ b/server/Makefile
@@ -32,10 +32,12 @@ SRC			=	src/core/config.c \
 				src/player/eggs.c \
 				src/player/eject.c \
 				src/player/food.c \
+				src/player/incantation.c \
 				src/player/info.c \
 				src/player/items.c \
 				src/player/join.c \
 				src/player/look.c \
+				src/player/magic.c \
 				src/player/map.c \
 				src/player/move.c \
 				src/player/rotate.c \
