fix: makefile for cp good path ai

--- a/ai/Makefile
+++ b/ai/Makefile
@@ -10,8 +10,8 @@ NAME    =   zappy_ai
 all: ${NAME}
 
 ${NAME}:
-	cp src/main.py ../${NAME}
-	chmod a+x ../${NAME}
+	cp src/main.py ${NAME}
+	chmod a+x ${NAME}
 
 clean:
 	${RM} -r build/
@@ -19,7 +19,7 @@ clean:
 	${RM} -r tests/__pycache__/
 
 fclean: clean
-	${RM} ../${NAME}
+	${RM} ${NAME}
 
 re:		fclean all
 
