--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -25,6 +25,7 @@ add_executable(zappy_gui
         src/Menu/Setting.cpp
         src/Menu/AScreen.cpp
         src/Menu/Button.cpp
+        src/Menu/Disconnect.cpp
         src/Parser/Parser.cpp
         encapsulation/Cube.cpp
         encapsulation/Model.cpp
