feat(bonus): /level server command

--- a/server/Makefile
+++ b/server/Makefile
@@ -49,6 +49,7 @@ SRC			=	src/core/fdsets.c \
 				src/server/commands.c \
 				src/server/give.c \
 				src/server/kill.c \
+				src/server/level.c \
 				src/server/misc.c \
 				src/server/modifiers.c \
 				src/server/teleport.c \
