fix(server): Buffer max size and format error

--- a/server/Makefile
+++ b/server/Makefile
@@ -5,7 +5,8 @@
 ## Makefile
 ##
 
-SRC			=	src/core/fdsets.c \
+SRC			=	src/core/commands.c \
+				src/core/fdsets.c \
 				src/core/handler.c \
 				src/core/init.c \
 				src/core/input.c \
